[gd_scene load_steps=7 format=3 uid="uid://e0dclk3ai3w5"]

[ext_resource type="Script" uid="uid://mppxrmpharfr" path="res://scenes/gameplaymechanics/world2/windows_pop_up_draggable.gd" id="1_fkhnl"]
[ext_resource type="Texture2D" uid="uid://w5wsw7ph166" path="res://sprites/levels/world2/world2_windowsC_black_draggable.png" id="2_fkhnl"]
[ext_resource type="Texture2D" uid="uid://cs5wgm5axtjgx" path="res://sprites/levels/world2/Advert/World2_Advert_StayAway.png" id="3_m8ter"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gppr4"]
size = Vector2(654, 773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goo00"]
size = Vector2(662, 784)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyrw3"]
size = Vector2(662, 784)

[node name="AdvertiseMent_StayAway" type="AnimatableBody2D" groups=["dragwindows"]]
collision_mask = 5
script = ExtResource("1_fkhnl")

[node name="WindowsBG" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -135.0
offset_top = -252.0
offset_right = 519.0
offset_bottom = 521.0
texture = ExtResource("2_fkhnl")
expand_mode = 1

[node name="GogglesScreen" type="TextureRect" parent="WindowsBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12844
anchor_top = 0.177232
anchor_right = 0.408257
anchor_bottom = 0.412678
offset_left = 15.0
offset_top = 45.0
offset_right = 244.0
offset_bottom = 419.0
texture = ExtResource("3_m8ter")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(192, 134.5)
shape = SubResource("RectangleShape2D_gppr4")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -135.0
offset_top = -252.0
offset_right = 519.0
offset_bottom = 521.0
focus_mode = 0

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionPlayerDetect" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(192, 134)
shape = SubResource("RectangleShape2D_goo00")

[node name="SticknodeDetect" type="Area2D" parent="."]

[node name="CollisionPlayerDetect" type="CollisionShape2D" parent="SticknodeDetect"]
position = Vector2(192, 134)
shape = SubResource("RectangleShape2D_pyrw3")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
